# Deliveroo-Click-Prediction

./: .gitignore  README.md  pyproject.toml
data/processed/: batch_predictions.csv
scripts/: deliveroo_analysis.R  predict_batch.py  run_app.py  train.py
src/deliveroo_click_prediction/: __init__.py  app.py  config.py  data_loader.py  model.py  preprocessing.py  sidebar.py  ui.py
src/deliveroo_click_prediction/tabs/: __init__.py  batch_predictions.py  business_insights.py  model_metrics.py  single_prediction.py
